--- a/example/tests/index.html
+++ b/example/tests/index.html
@@ -34,7 +34,7 @@
 
 
 <script>
-    let ws = new WebSocket("ws://127.0.0.1:3000/ws");
+    let ws = new WebSocket("ws://127.0.0.1:3000/connect");
     // let ws = new WebSocket("ws://192.168.31.98:3000/ws");
 
     let count = 0;
